syntax = "proto3";
option java_multiple_files = true;
package com.netgrif.pluginlibrary.core;

message ExecutionRequest {
  string entryPoint = 1;
  string method = 2;
  repeated bytes args = 3;
}

message ExecutionResponse {
  bytes response = 1;
}

service ExecutionService {
  rpc execute(ExecutionRequest) returns (ExecutionResponse);
}